extensions/dear-imgui-test-engine-sys/shim/cimgui_test_engine.h

typedef struct ImGuiTestEngine ImGuiTestEngine;
typedef struct ImGuiTestEngineScript ImGuiTestEngineScript;
typedef enum ImGuiTestEngineStatus {
    ImGuiTestEngineStatus_Success = 0,
    ImGuiTestEngineStatus_InvalidArgument = 1,
    ImGuiTestEngineStatus_InvalidState = 2,
    ImGuiTestEngineStatus_NotFound = 3,
    ImGuiTestEngineStatus_OutOfRange = 4,
    ImGuiTestEngineStatus_Exception = 5,
} ImGuiTestEngineStatus;
ImGuiTestEngineStatus imgui_test_engine_script_item_drag_with_delta(ImGuiTestEngineScript* script, const char* ref, float dx, float dy);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_x(ImGuiTestEngineScript* script, const char* ref, float scroll_x);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_y(ImGuiTestEngineScript* script, const char* ref, float scroll_y);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_pos_x(ImGuiTestEngineScript* script, const char* window_ref, float pos_x);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_pos_y(ImGuiTestEngineScript* script, const char* window_ref, float pos_y);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_item_x(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_item_y(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_top(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_scroll_to_bottom(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_tab_close(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_combo_click(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_combo_click_all(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_table_click_header(ImGuiTestEngineScript* script, const char* table_ref, const char* label, int key_mods);
ImGuiTestEngineStatus imgui_test_engine_script_menu_click(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_menu_check(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_menu_uncheck(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_menu_check_all(ImGuiTestEngineScript* script, const char* ref_parent);
ImGuiTestEngineStatus imgui_test_engine_script_menu_uncheck_all(ImGuiTestEngineScript* script, const char* ref_parent);
ImGuiTestEngineStatus imgui_test_engine_script_set_input_mode(ImGuiTestEngineScript* script, int input_source);
ImGuiTestEngineStatus imgui_test_engine_script_nav_move_to(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_nav_activate(ImGuiTestEngineScript* script);
ImGuiTestEngineStatus imgui_test_engine_script_nav_input(ImGuiTestEngineScript* script);
ImGuiTestEngineStatus imgui_test_engine_script_item_open_all(ImGuiTestEngineScript* script, const char* ref_parent, int depth, int passes);
ImGuiTestEngineStatus imgui_test_engine_script_item_close_all(ImGuiTestEngineScript* script, const char* ref_parent, int depth, int passes);
ImGuiTestEngineStatus imgui_test_engine_script_window_close(ImGuiTestEngineScript* script, const char* window_ref);
ImGuiTestEngineStatus imgui_test_engine_script_window_collapse(ImGuiTestEngineScript* script, const char* window_ref, bool collapsed);
ImGuiTestEngineStatus imgui_test_engine_script_window_focus(ImGuiTestEngineScript* script, const char* window_ref);
ImGuiTestEngineStatus imgui_test_engine_script_window_bring_to_front(ImGuiTestEngineScript* script, const char* window_ref);
ImGuiTestEngineStatus imgui_test_engine_script_window_move(ImGuiTestEngineScript* script, const char* window_ref, float x, float y);
ImGuiTestEngineStatus imgui_test_engine_script_window_resize(ImGuiTestEngineScript* script, const char* window_ref, float w, float h);
ImGuiTestEngineStatus imgui_test_engine_script_table_open_context_menu(ImGuiTestEngineScript* script, const char* table_ref, int column_n);
ImGuiTestEngineStatus imgui_test_engine_script_table_set_column_enabled(ImGuiTestEngineScript* script, const char* table_ref, int column_n, bool enabled);
ImGuiTestEngineStatus imgui_test_engine_script_table_set_column_enabled_by_label(ImGuiTestEngineScript* script, const char* table_ref, const char* label, bool enabled);
ImGuiTestEngineStatus imgui_test_engine_script_table_resize_column(ImGuiTestEngineScript* script, const char* table_ref, int column_n, float width);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_exists(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_visible(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_read_int_eq(ImGuiTestEngineScript* script, const char* ref, int expected);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_read_str_eq(ImGuiTestEngineScript* script, const char* ref, const char* expected);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_read_float_eq(ImGuiTestEngineScript* script, const char* ref, float expected, float epsilon);
ImGuiTestEngineStatus imgui_test_engine_script_wait_for_item(ImGuiTestEngineScript* script, const char* ref, int max_frames);
ImGuiTestEngineStatus imgui_test_engine_script_wait_for_item_visible(ImGuiTestEngineScript* script, const char* ref, int max_frames);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_checked(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_assert_item_opened(ImGuiTestEngineScript* script, const char* ref);
ImGuiTestEngineStatus imgui_test_engine_script_wait_for_item_checked(ImGuiTestEngineScript* script, const char* ref, int max_frames);
ImGuiTestEngineStatus imgui_test_engine_script_wait_for_item_opened(ImGuiTestEngineScript* script, const char* ref, int max_frames);
ImGuiTestEngineStatus imgui_test_engine_script_yield(ImGuiTestEngineScript* script, int frames);
ImGuiTestEngineStatus imgui_test_engine_register_script_test(
    ImGuiTestEngine* engine,
    const char* category,
    const char* name,
    ImGuiTestEngineScript* script
);