extensions/dear-imgui-test-engine-sys/src/bindings_pregenerated.rs

unsafe extern "C" {
    pub fn imgui_test_engine_script_item_drag_with_delta(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        dx: f32,
        dy: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_x(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        scroll_x: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_y(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        scroll_y: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_pos_x(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
        pos_x: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_pos_y(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
        pos_y: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_item_x(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_item_y(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_top(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_scroll_to_bottom(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_tab_close(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_combo_click(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_combo_click_all(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_table_click_header(
        script: *mut ImGuiTestEngineScript,
        table_ref: *const ::std::os::raw::c_char,
        label: *const ::std::os::raw::c_char,
        key_mods: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_menu_click(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_menu_check(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_menu_uncheck(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_menu_check_all(
        script: *mut ImGuiTestEngineScript,
        ref_parent: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_menu_uncheck_all(
        script: *mut ImGuiTestEngineScript,
        ref_parent: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_set_input_mode(
        script: *mut ImGuiTestEngineScript,
        input_source: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_nav_move_to(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_nav_activate(script: *mut ImGuiTestEngineScript);
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_nav_input(script: *mut ImGuiTestEngineScript);
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_open_all(
        script: *mut ImGuiTestEngineScript,
        ref_parent: *const ::std::os::raw::c_char,
        depth: ::std::os::raw::c_int,
        passes: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_item_close_all(
        script: *mut ImGuiTestEngineScript,
        ref_parent: *const ::std::os::raw::c_char,
        depth: ::std::os::raw::c_int,
        passes: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_window_close(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_window_collapse(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
        collapsed: bool,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_window_focus(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_window_bring_to_front(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_window_move(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
        x: f32,
        y: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_window_resize(
        script: *mut ImGuiTestEngineScript,
        window_ref: *const ::std::os::raw::c_char,
        w: f32,
        h: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_table_open_context_menu(
        script: *mut ImGuiTestEngineScript,
        table_ref: *const ::std::os::raw::c_char,
        column_n: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_table_set_column_enabled(
        script: *mut ImGuiTestEngineScript,
        table_ref: *const ::std::os::raw::c_char,
        column_n: ::std::os::raw::c_int,
        enabled: bool,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_table_set_column_enabled_by_label(
        script: *mut ImGuiTestEngineScript,
        table_ref: *const ::std::os::raw::c_char,
        label: *const ::std::os::raw::c_char,
        enabled: bool,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_table_resize_column(
        script: *mut ImGuiTestEngineScript,
        table_ref: *const ::std::os::raw::c_char,
        column_n: ::std::os::raw::c_int,
        width: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_exists(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_visible(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_read_int_eq(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        expected: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_read_str_eq(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        expected: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_read_float_eq(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        expected: f32,
        epsilon: f32,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_wait_for_item(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        max_frames: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_wait_for_item_visible(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        max_frames: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_checked(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_assert_item_opened(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_wait_for_item_checked(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        max_frames: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_wait_for_item_opened(
        script: *mut ImGuiTestEngineScript,
        ref_: *const ::std::os::raw::c_char,
        max_frames: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_script_yield(
        script: *mut ImGuiTestEngineScript,
        frames: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn imgui_test_engine_register_script_test(
        engine: *mut ImGuiTestEngine,
        category: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        script: *mut ImGuiTestEngineScript,
    );
}
